# squirrel_planning

./: .travis.rosinstall  .travis.yml
kcl_knowledge_base/: CMakeLists.txt  package.xml
kcl_knowledge_base/model/: kcl_knowledge_base.ros_package  kcl_knowledge_base.ros_package_diagram
kcl_planning_system/: CMakeLists.txt  package.xml
kcl_planning_system/model/: kcl_planning_system.ros_package  kcl_planning_system.ros_package_diagram
squirrel_interface_emote/: CMakeLists.txt  package.xml
squirrel_interface_emote/include/squirrel_interface_emote/: ShowLightsAction.h
squirrel_interface_emote/src/: RPEmoteAction.cpp  ShowLightsAction.cpp
squirrel_interface_hri/: CMakeLists.txt  package.xml
squirrel_interface_hri/include/squirrel_hri_knowledge/: FollowChildAction.h  PerformSocialBehaviour.h
squirrel_interface_hri/src/: FollowChildAction.cpp  PerformSocialBehaviour.cpp  RPPointingServer.cpp
squirrel_interface_manipulation/: CMakeLists.txt
squirrel_interface_manipulation/include/squirrel_interface_manipulation/: RPGraspAction.h  RPPushAction.h
squirrel_interface_manipulation/src/: RPGraspAction.cpp  RPHandoverAction.cpp
squirrel_interface_perception/: CMakeLists.txt  package.xml
squirrel_interface_perception/include/squirrel_interface_perception/: RPObjectPerception.h  RPPerceptionAction.h
squirrel_interface_perception/src/: RPObjectPerception.cpp  RPPerceptionAction.cpp
squirrel_interface_speech/include/squirrel_interface_speech/: VADSpeechAction.h
squirrel_knowledge_base/: CMakeLists.txt
squirrel_knowledge_base/model/: knowledge_base.ros_package
squirrel_planning_execution/: CMakeLists.txt  package.xml
squirrel_planning_execution/conf/: final-review.conf  grasping-test.conf  oxygen_battery.conf  tuw_oxygen_battery.conf  year3-scenario1-freiburg.conf  year3-scenario1.conf  year4-behaviour-vienna.conf  year4-robot-behaviour.conf
squirrel_planning_execution/include/squirrel_planning_execution/: BehaviourAndEmotion.h  ConfigReader.h  KnowledgeBase.h  RecommenderSystem.h  ViewConeGenerator.h
squirrel_planning_execution/src/: BehaviourAndEmotion.cpp  ConfigReader.cpp  ContingentStrategicClassifyPDDLGenerator.cpp  FinalReviewMain.cpp  FinalReviewRedux.cpp  KnowledgeBase.cpp  OxygenBattery.cpp  RecommenderSystem.cpp  RobotKnowsGame.cpp  SimulatedPDDLActionsNode.cpp  TestGrasping.cpp  ViewConeGenerator.cpp
squirrel_planning_execution/src/NeedBattery/: NeedBattery.cpp  NeedBattery.h  PersuadeChild.cpp  PersuadeChild.h
squirrel_planning_execution/src/pddl_actions/: AttemptToExamineObjectPDDLAction.cpp  AttemptToExamineObjectPDDLAction.h  ChargeBatteryPDDLAction.cpp  ChargeBatteryPDDLAction.h  ChildGiveObjectToRobotPDDLAction.cpp  ChildGiveObjectToRobotPDDLAction.h  ChildPickupPDDLAction.cpp  ChildPickupPDDLAction.h  ClassifyObjectInHandPDDLAction.cpp  ClassifyObjectInHandPDDLAction.h  ExamineAreaPDDLAction.cpp  ExamineAreaPDDLAction.h  ExamineObjectInHandPDDLAction.cpp  ExploreAreaPDDLAction.cpp  ExploreAreaPDDLAction.h  ExploreWaypointPDDLAction.cpp  ExploreWaypointPDDLAction.h  ObserveClassifiableOnAttemptPDDLAction.cpp  ObserveClassifiableOnAttemptPDDLAction.h  PlannerInstance.cpp  PlannerInstance.h  TidyAreaPDDLAction.cpp  TidyAreaPDDLAction.h
squirrel_planning_launch/common/: child-emotion-domain.pddl  child-emotion-problem.pddl  domain_ask.pddl  domain_sense.pddl  final-review-domain.pddl  final-review-redux-domain.pddl  grasping_domain-nt.pddl  oxygen_battery_domain.pddl  oxygen_battery_plan.pddl  robot-behaviour-domain.pddl  robot-behaviour-problem.pddl  robot-micro-behaviour-domain.pddl  robot-micro-behaviour-problem.pddl  strategic-behaviour-domain.pddl  strategic-behaviour-problem.pddl  tactical-behaviour-domain.pddl  tactical-behaviour-problem.pddl  test_grasp_plan.pddl
squirrel_planning_launch/launch/: final-review-redux-domain.pddl  mongo_db_startup.launch  squirrel_planning_behaviour.launch  squirrel_planning_db.launch  squirrel_planning_final_review.launch  squirrel_planning_final_review_redux.launch  squirrel_planning_oxygen_battery.launch  squirrel_planning_robot_behaviour.launch  squirrel_planning_test_grasping.launch  squirrel_planning_test_recommender.launch
squirrel_planning_system/: CMakeLists.txt  package.xml
squirrel_planning_system/model/: planning_system.ros_package
squirrel_planning_system/src/util/: Listener.cpp  PlanVisualisation.cpp  TestHarness.cpp
