<?xml version="1.0"?>
<package>
  <name>kcl_planning_system</name>
  <description>Planning system for SQUIRREL</description>
  <version>0.1.0</version>
  <maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
  <author email="michael.cashmore@kcl.ac.uk">michael</author>
  <license></license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- bride default dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib</run_depend>

  <!-- user dependencies -->
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>planning_dispatch_msgs</build_depend>
  <run_depend>planning_dispatch_msgs</run_depend>
  <build_depend>planning_knowledge_msgs</build_depend>
  <run_depend>planning_knowledge_msgs</run_depend>

  <!-- protected region additional manifest statements on begin -->
  <!-- protected region additional manifest statements end -->

</package>
